[+]: added lab_04 with mongo sharding
