# internal/router/ogen/oas_request_encoders_gen.go
@@ -38,6 +38,20 @@ func encodeAPILoginRequest(
 	return nil
 }
 
+func encodeAPIPatchEventRequest(
+	req *PatchEventRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeAPIRegisterRequest(
 	req *UserRegisterRequest,
 	r *http.Request,
